assets/css/v2/elevator/closures.scss
@use "CSS/colors";

.elevator-closures {
  display: flex;
  flex: 1;
  flex-direction: column;
  font-size: 48px;
  line-height: 62px;
  color: colors.$cool-black-30;

  .in-station-summary {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 24px 48px;

    .text {
      margin-right: 82px;
    }

    &::after {
      position: absolute;
      top: 100%;
      left: 0;
      width: 100%;
      height: 24px;
      content: "";
      background: colors.$cool-black-15;
    }
  }

  .divider {
    width: 936px;
    height: 4px;
    background-color: #73737364;
    border-radius: 2px;
  }

  .no-closures {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 80px;
    padding: 148px 72px;
    color: colors.$cool-black-15;

    &__header {
      font-size: 90px;
      font-weight: 700;
      line-height: 106px;
    }

    &__text {
      margin-bottom: 30px;
      font-size: 70px;
      font-weight: 400;
      line-height: 92px;
    }
  }

  .closures-info {
    height: 100%;
    background-color: colors.$warm-neutral-90;

    .upcoming-closure {
      display: flex;
      flex-direction: column;
      margin: 48px;
      font-size: 80px;
      font-weight: 400;
      line-height: 88px;
      color: colors.$cool-black-30;

      & > * {
        margin-bottom: 40px;
      }

      &__title {
        --size: 150px;

        // Only allow taking up two lines of text. If longer, will X-overflow
        // and be detected by a layout effect which shortens the text.
        flex-basis: calc(var(--size) * 2);
        font-size: var(--size);
        font-weight: 700;
        line-height: 1;
        color: colors.$cool-black-15;
      }

      &__postfix {
        font-weight: 700;
        text-transform: capitalize;
      }
    }

    .header-container {
      margin: 48px;
      margin-bottom: 0;

      .header {
        display: flex;
        margin-bottom: 48px;
        font-size: 96px;
        font-weight: 700;
        line-height: 96px;
      }
    }

    .closure-list-container {
      overflow: hidden;

      .closure-list {
        display: flex;
        flex-flow: column wrap;
        height: 1000px;
        transform: translateX(calc(-100% * var(--closure-list-offset)));

        .closure-row {
          position: relative;
          width: 1080px;
          padding: 26px 48px 24px;

          &:not(.current-station) {
            &::after,
            &.first-row-on-page::before {
              position: absolute;
              left: 0;
              width: calc(100% - 48px);
              height: 2px;
              margin: 0 24px;
              content: "";
              background: colors.$true-grey-45;
              opacity: 0.5;
            }

            &::after {
              top: 100%;
            }

            &::before {
              top: 0;
            }
          }

          &.current-station {
            background-color: colors.$warm-neutral-85;
          }

          &__station-name {
            font-size: 62px;
            font-weight: 600;
            line-height: 80px;
            color: colors.$cool-black-15;
          }

          &__name-and-pills {
            display: flex;
            align-items: center;
            margin-bottom: 14px;

            .route-pill {
              width: 132px;
              height: 68.13px;
              margin-right: 24px;

              &__text {
                line-height: 68.13px;
              }

              &__icon {
                height: 100%;
              }

              &__icon-image {
                height: 100%;
                margin-top: 0;
              }
            }
          }

          &__elevator-name {
            font-weight: 500;
          }

          &__elevator-name.list-item {
            display: list-item;
            margin-right: 48px;
            margin-bottom: 8px;
            margin-left: 48px;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
            list-style-position: inside;
          }

          &__summary.important {
            font-weight: 700;
          }
        }
      }
    }
  }

  .paging-info-container {
    position: absolute;
    bottom: 0;
    display: flex;
    width: 100%;
    height: 72px;
    padding-left: 48px;
    margin-bottom: 20px;

    .paging-indicators {
      // Align to right edge regardless of whether it's the only flex item
      margin-left: auto;
    }
  }
}

